# GHOST

./: CMakeLists.txt  ChangeLog  LICENSE.md  Makefile.am  Makefile.in  README  README.md  README.pkg  READMENT.txt  TODO  configure  configure.in  ghostConfig.cmake.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pkgsrc/CULghost/: copyright  depend  pkginfo  prototype
src/: Makefile.am  Makefile.in
src/hershey/: CMakeLists.txt  GHOST80FNT101  GHOST80FNT102  GHOST80FNT103  GHOST80FNT104  GHOST80FNT105  GHOST80FNT107  GHOST80FNT108  GHOST80FNT111  GHOST80FNT113  Makefile.am  Makefile.in  build.F
src/lib/: CMakeLists.txt  Makefile.am  Makefile.in  Opcodes.h  annotp.f  arc.f  arcell.f  axes.f  axessi.f  axexl.f  axexli.f  axexyl.f  axeyl.f  axeyli.f  axints.f  axnota.f  axorig.f  baccol.f  bar3d.f  barcht.f  barflg.f  bartyp.f  border.f  box.f  br3ang.f  br3bas.f  br3col.f  br3lbl.f  br3rat.f  broken.f  cdefin.f  channl.f  circle.f  clrbuf.f  colset.f  conlbl.f  conota.f  contia.f  contif.f  contil.f  (+374 more)
src/libexec/: CMakeLists.txt  Makefile.am  Makefile.in  Plot.c  Plot.h  PlotGraphics.c  PlotP.h  PlotReplay.c  ghost.xbm  xgenie.c  xgenie.tcl
win32/ghost80/: ghost80.dsw
win32/ghost80/decode/: decode.dsp
win32/ghost80/demosurf/: demosurf.dsp
win32/ghost80/hershey/: hershey.dsp
win32/ghost80/hpgl2/: hpgl2.dsp
win32/ghost80/libdecode/: libdecode.dsp
win32/ghost80/libghost/: libghost.dsp
win32/ghost80/libghostm/: libghostm.dsp
win32/ghost80/libgrid/: libgrid.dsp
win32/ghost80/libgriddecode/: libgriddecode.dsp
win32/ghost80/libgridhpgl2/: libgridhpgl2.dsp
win32/ghost80/libgridm/: libgridm.dsp
win32/ghost80/libgridpostcl/: libgridpostcl.dsp
win32/ghost80/libgridpostsc/: libgridpostsc.dsp
win32/ghost80/libgridtrenc/: libgridtrenc.dsp
win32/ghost80/libgridxghost/: libgridxghost.dsp
win32/ghost80/libgridxghostm/: libgridxghostm.dsp
win32/ghost80/libhpgl2/: libhpgl2.dsp
win32/ghost80/libpostcl/: libpostcl.dsp
win32/ghost80/libpostsc/: libpostsc.dsp
win32/ghost80/libtrand/: libtrand.dsp
win32/ghost80/libtrenc/: libtrenc.dsp
win32/ghost80/libxghost/: libxghost.dsp
win32/ghost80/postcl/: postcl.dsp
win32/ghost80/postsc/: postsc.dsp
win32/ghost80/trand/: trand.dsp
win32/ghost80/trenc/: trenc.dsp
win32/ghost80/xgeniex/: xgeniex.dsp
win32/ghost80/xghost/: xghost.dsp
