## Process this file with automake to produce Makefile.in

## Do not require GNU tools
AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST= \
TODO \
READMENT.txt \
README.pkg \
pkgsrc/CULghost/prototype \
pkgsrc/CULghost/pkginfo \
pkgsrc/CULghost/copyright \
pkgsrc/CULghost/depend \
win32/ghost80/ghost80.dsw \
win32/ghost80/libghostm/libghostm.dsp \
win32/ghost80/hershey/hershey.dsp \
win32/ghost80/demosurf/demosurf.dsp \
win32/ghost80/trenc/trenc.dsp \
win32/ghost80/trand/trand.dsp \
win32/ghost80/xghost/xghost.dsp \
win32/ghost80/postsc/postsc.dsp \
win32/ghost80/postcl/postcl.dsp \
win32/ghost80/libxghost/libxghost.dsp \
win32/ghost80/libtrenc/libtrenc.dsp \
win32/ghost80/libtrand/libtrand.dsp \
win32/ghost80/libpostsc/libpostsc.dsp \
win32/ghost80/libpostcl/libpostcl.dsp \
win32/ghost80/libhpgl2/libhpgl2.dsp \
win32/ghost80/libgridxghost/libgridxghost.dsp \
win32/ghost80/libgridtrenc/libgridtrenc.dsp \
win32/ghost80/libgridpostsc/libgridpostsc.dsp \
win32/ghost80/libgridpostcl/libgridpostcl.dsp \
win32/ghost80/hpgl2/hpgl2.dsp \
win32/ghost80/libgridhpgl2/libgridhpgl2.dsp \
win32/ghost80/decode/decode.dsp \
win32/ghost80/libgriddecode/libgriddecode.dsp \
win32/ghost80/libgrid/libgrid.dsp \
win32/ghost80/libdecode/libdecode.dsp \
win32/ghost80/libghost/libghost.dsp \
win32/ghost80/libgridxghostm/libgridxghostm.dsp \
win32/ghost80/libgridm/libgridm.dsp \
win32/ghost80/xgeniex/xgeniex.dsp


SUBDIRS = src
