add_executable(build_fonts build.F)

set(GHOSTFONTS
  GHOST80FONT11
  GHOST80FONT12
  GHOST80FONT13
  GHOST80FONT14
  GHOST80FONT15
  GHOST80FONT16
  GHOST80FONT17
  GHOST80FONT18
  GHOST80FONT19
  GHOST80FONT20
  GHOST80FONT21
  GHOST80FONT22
  GHOST80FONT23
  GHOST80FONT24
  GHOST80FONT25
)

list(TRANSFORM GHOSTFONTS PREPEND "${CMAKE_CURRENT_BINARY_DIR}/")

set(PSFONTS
  GHOST80FNT101
  GHOST80FNT102
  GHOST80FNT103
  GHOST80FNT104
  GHOST80FNT105
  GHOST80FNT106
  GHOST80FNT107
  GHOST80FNT108
  GHOST80FNT109
  GHOST80FNT110
  GHOST80FNT111
  GHOST80FNT112
  GHOST80FNT113
  )

list(TRANSFORM PSFONTS PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")

target_compile_definitions(build_fonts PRIVATE
  GHOST_RECL_UNIT=4
  GHOST_LIBDIR="${CMAKE_INSTALL_LIBDIR}"
  GHOST_LIBEXECDIR="${CMAKE_INSTALL_LIBEXECDIR}"
  USEUNDERSCORE
  LITTLE_ENDIAN
)

add_custom_target(copy_psfonts
  COMMAND "${CMAKE_COMMAND}" -E copy
    HERSHY.DAT
    COMFIN.DAT
    ${PSFONTS}
    "${CMAKE_CURRENT_BINARY_DIR}"
  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
  DEPENDS HERSHY.DAT COMFIN.DAT ${PSFONTS}
  COMMENT "Copying psfonts"
  )

add_custom_command(OUTPUT ${GHOSTFONTS}
  COMMAND "${CMAKE_COMMAND}" -E rm -f ${GHOSTFONTS}
  COMMAND ./build_fonts
  DEPENDS copy_psfonts build_fonts
  )

add_custom_target(make_ghostfonts
  ALL
  DEPENDS ${GHOSTFONTS}
  COMMENT "Creating GHOST fonts"
  )

install(FILES ${GHOSTFONTS} ${PSFONTS}
  DESTINATION "${CMAKE_INSTALL_LIBDIR}/fonts"
  )
